Added matrix stuff

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -4,12 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Numpy"
+    "# Numpy\n",
+    "\n",
+    "NumPy is a Python library for handling multi-dimensional arrays. It contains both the data structures needed for the storing and accessing arrays, and operations and functions for computation using these arrays. Although the arrays are usually used for storing number, other type of data can be stored as well, such as strings. Unlike lists in core Python, NumPy's fundamental data structure, the array, must have the same data type for all its elements. The homogeneity of arrays allows highly optimized functions that use arrays as their inputs.\n",
+    "\n",
+    "There are several uses for high-dimensional arrays in data analysis. For instance, they can be used to:\n",
+    "* store matrices, solve systems of linear equations, find eigenvalues/vectors, find matrix decompositions, and solve other problems familiar from linear algebra\n",
+    "* store multi-dimensional measurement data. For example, an element a_ij in a 2-dimensional array might store the temperature measured at coordinates i, j on a 2-dimension surface.\n",
+    "* a 2-dimensional table might store a sequence of *samples*, and each sample might be divided into *features*. For example, we could measure the weather conditions once per day, and the conditions could include the temperature, direction and speed of wind, and the amount of rain. Then we would have one sample per day, and the features would be the temperature, wind, and rain. In the standard representation of this kind of tabular data, we the rows corresponds to samples and the columns correspond to features. We see more of this kind of data in the chapters on Pandas and Scikit-learn.\n",
+    "\n",
+    "In this chapter we will go through:\n",
+    "* Creation of arrays\n",
+    "* Array types and attributes\n",
+    "* Accessing arrays with indexing and slicing\n",
+    "* Reshaping of arrays\n",
+    "* Combining and splitting arrays\n",
+    "* Fast operations on arrays\n",
+    "* Aggregations of arrays\n",
+    "* Rules of binary array operations\n",
+    "* Matrix operations familiar from linear algebra"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We start by importing the NumPy library, and we use the standard abbreviation `np` for it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +67,13 @@
    ],
    "source": [
     "np.array([1,2,3])   # one dimensional array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that leaving out the brackets from the above expression, i.e. calling `np.array(1,2,3)` will result in an error."
    ]
   },
   {
@@ -481,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,6 +582,16 @@
    "source": [
     "d=np.array([[1,2,3,4]])                # a row vector\n",
     "info(\"d\", d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note above how Python printed the three dimensional array. The general rules of printing an n-dimensional array as a nested list are:\n",
+    "* the last dimension is printed from left to right,\n",
+    "* the second-to-last is printed from top to bottom,\n",
+    "* the rest are also printed from top to bottom, with each slice separated from the next by an empty line."
    ]
   },
   {
@@ -1135,7 +1177,132 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fast computation using universal functions"
+    "#### <div class=\"alert alert-info\"> Exercise X (diamond)</div>\n",
+    "Create a function `diamond` that returns a two dimensional integer array where the `1`s form a diamond shape. Rest of the numbers are `0`. The function should get a parameter that tells the size of the diamond. Do this using the eye, t (transpose), and concat function of NumPy.\n",
+    "\n",
+    "Example of usage:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fast computation using universal functions\n",
+    "\n",
+    "In addition to providing a way to store and access multi-dimension arrays, NumPy also provides several routines to perform computations on them. One of the reasons for the popularity of NumPy is that these computations can be very efficient, much more efficient than what Python can normally do. The biggest bottle-necks in efficiency are the loops, which can be iterated millions, billions, or even more times. The loops should be as efficient as possible. What slows down loops in Python as the fact that Python is dynamically typed language. That means that at each expression Python has find out which are the typed of the arguments of the operations. Let's consider the following loop:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 5.2, 'ab']\n"
+     ]
+    }
+   ],
+   "source": [
+    "L=[1, 5.2, \"ab\"]\n",
+    "L2=[]\n",
+    "for x in L:\n",
+    "    L2.append(x*2)\n",
+    "print(L)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At each iteration of this loop Python has find out the type of the variable x, which can in this example be an int, a float or a string, and depending on this type call a different function to perform the \"multiplication\" by two. What makes NumPy efficient, is the requirement that each element in an array must be of the same type. This homogeneity of arrays makes it possible to create *vectorized* operation, which don't operate on single elements, but on arrays (or subarrays). The previous example using vectorized operations of NumPy is shown below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 4.2 10.  34.4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.array([2.1, 5.0, 17.2])\n",
+    "a2=a*2\n",
+    "print(a2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because each iteration is using identical operations only the data differs, this can compiled into machine language, and then performed in one go, hence avoiding Python's dynamic typing. The name vector operation comes from linear algebra where the addition of two vectors \\\\(v=(v_1,v_2, \\ldots, v_d)\\\\) and  \\\\(w=(w_1,w_2, \\ldots, w_d)\\\\) is defined element-wise as \\\\(v+w = (v_1 + w_1,v_2 + w_2, \\ldots, v_d + w_d)\\\\).\n",
+    "\n",
+    "In addition to addition they are several mathematical functions defined in the vector form. The basic arithmetic operations are: addition `+`, subtraction `-`, negation `-`, multiplication `*`, division `/`, floor division `//`, exponentation `**`, and remainder `%`. \n",
+    "\n",
+    "The can be combined into more complicated expressions. An example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[   4.41   -80.    -710.016]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=np.array([-1, 3.2, 2.4])\n",
+    "print(-a**2 * b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Several other mathematical functions are defined as well. A few examples of these can be found below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.  3.2 2.4]\n",
+      "[ 0.54030231 -0.99829478 -0.73739372]\n",
+      "[ 0.36787944 24.5325302  11.02317638]\n",
+      "[0.         1.67807191 1.26303441]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.abs(b))\n",
+    "print(np.cos(b))\n",
+    "print(np.exp(b))\n",
+    "print(np.log2(np.abs(b)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In NumPy nomenclature these vector operations are called *ufuncs* (universal functions)."
    ]
   },
   {
@@ -2240,7 +2407,152 @@
    "metadata": {},
    "source": [
     "## Matrix operations\n",
-    "    "
+    "\n",
+    "The `*` operator is NumPy corresponds to the element-wise product of two arrays. However, very often we would like to use the *matrix multiplication*. As a reminder, if $a$ and $b$ are two matrices with shapes $n \\times k$ and $k \\times m$ respectively, then the matrix product of $a$ and $b$ is the matrix $c$ with shape $n \\times m$, where $c_{ij} = \\sum_{h=1}^k a_{ih} b_{hj}$ for $1 \\le i \\le n$ and $1 \\le j \\le m$. In NumPy we can compute the matrix product using the `np.matmul` function or the `@` operator. An example of this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5 0]\n",
+      " [3 3]\n",
+      " [7 9]]\n",
+      "[[3 5 2 4]\n",
+      " [7 6 8 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(0)\n",
+    "a=np.random.randint(0,10, (3,2))\n",
+    "b=np.random.randint(0,10, (2,4))\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c has dim 2, shape (3, 4), size 12, and dtype int64:\n",
+      "[[ 15  25  10  20]\n",
+      " [ 30  33  30  36]\n",
+      " [ 84  89  86 100]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=np.matmul(a,b)\n",
+    "info(\"c\", c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 15  25  10  20]\n",
+      " [ 30  33  30  36]\n",
+      " [ 84  89  86 100]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a@b)      # This can be more convenient when complex expressions are used"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, matrices are just two dimensional arrays with the product defined differently from the element-wise product. Note that for the matrix product to be defined, the two matrices have to have compatible shapes. So the following would produce an error:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a@a   # Try uncommenting to see the error message"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's test some basic identities that should hold for an [invertible matrix](https://en.wikipedia.org/wiki/Invertible_matrix):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 6 7]\n",
+      " [7 8 1]\n",
+      " [5 9 8]]\n",
+      "[[-0.61111111 -0.16666667  0.55555556]\n",
+      " [ 0.56666667  0.3        -0.53333333]\n",
+      " [-0.25555556 -0.23333333  0.37777778]]\n",
+      "[[ 1.00000000e+00 -8.32667268e-17  4.44089210e-16]\n",
+      " [-5.55111512e-17  1.00000000e+00  4.44089210e-16]\n",
+      " [-4.44089210e-16  0.00000000e+00  1.00000000e+00]]\n",
+      "[[ 1.00000000e+00  9.99200722e-16 -8.88178420e-16]\n",
+      " [ 0.00000000e+00  1.00000000e+00  8.88178420e-16]\n",
+      " [ 2.22044605e-16 -4.44089210e-16  1.00000000e+00]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s=np.array([[1, 6, 7],\n",
+    " [7, 8, 1],\n",
+    " [5, 9, 8]])\n",
+    "print(s)\n",
+    "s_inv = np.linalg.inv(s)\n",
+    "print(s_inv)\n",
+    "print(s @ s_inv)                            # This should be pretty close to the identity matrix np.eye(3)\n",
+    "print(s_inv @ s)                            # Same here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[39 41 57]\n",
+      "[1. 4. 2.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=np.array([1,4,2])\n",
+    "y = s @ x                  # Transforms x to y\n",
+    "print(y)\n",
+    "print(s_inv @ y)           # Transforms y back to x"
    ]
   }
  ],
