--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,33 @@
    "source": [
     "# As with lists modification through indexing is possible\n",
     "b[0,0] = 10\n",
-    "print(a)"
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that if you give only a single index to a multi-dimensional array, it indexes the first dimension of the array, that is then rows. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10  2  3]\n",
+      "[4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(b[0])    # First row\n",
+    "print(b[1])    # Second row"
    ]
   },
   {
@@ -904,6 +930,57 @@
    "source": [
     "### a list as an index returns a 2d array, single index a 1d array"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (rows and columns)</div>\n",
+    "\n",
+    "Write two functions, `get_rows` and `get_columns`, that get a two dimensional array as parameter.\n",
+    "They should return the list of rows and columns of the array, respectively. The rows and columns should be one dimensional arrays. You may use the transpose operation, which flips rows to columns. The transpose is done by the `T` method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.48431215  0.57914048 -0.18158257  1.41020463]\n",
+      " [-0.37447169  0.27519832 -0.96075461  0.37692697]\n",
+      " [ 0.03343893  0.68056724 -1.56349669 -0.56669762]\n",
+      " [-0.24214951  1.51439128 -0.3330574   0.04736482]]\n",
+      "[[ 0.48431215 -0.37447169  0.03343893 -0.24214951]\n",
+      " [ 0.57914048  0.27519832  0.68056724  1.51439128]\n",
+      " [-0.18158257 -0.96075461 -1.56349669 -0.3330574 ]\n",
+      " [ 1.41020463  0.37692697 -0.56669762  0.04736482]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.random.randn(4,4)\n",
+    "print(a)\n",
+    "print(a.T)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test your solution in the main function.\n",
+    "Example of usage:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1463,6 +1540,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (vector lengths)</div>\n",
+    "\n",
+    "Write function `vector_lengths` that get a two dimensional array of shape (n,m) as a parameter. Each row in this array corresponds to a vector. The function should return an array of shape (n,1), that has the length of each vector in the input. The length is defined by the usual \n",
+    "[Euclidean norm](https://en.wikipedia.org/wiki/Norm_(mathematics&#41;#Euclidean_norm). Don't use loops at all in your solution. Instead use vectorized operations. You must use at least the `np.sum` and the `np.sqrt` functions (or the equivalent methods). Test your function in the main function.\n",
+    "\n",
+    "\n",
+    "ÄLÄ KÄYTÄ scipy.linalg.norm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (vector angles)</div>\n",
+    "\n",
+    "Let x and y be n-dimensional vectors. The angle $\\alpha$ between two vectors is defined by the equation\n",
+    "$\\cos_{xy}(\\alpha):=\\frac{\\langle x,y\\rangle}{||x|| ||y||}$,\n",
+    "where the angle brackets denote the [inner product](https://en.wikipedia.org/wiki/Inner_product_space#Euclidean_space), and $||x||:=\\sqrt{\\langle x,x \\rangle}$. \n",
+    "\n",
+    "Write function `vector_angles` that gets two arrays X and Y with same shape (n,m) as parameters. Each row in the arrays corresponds to a vector. The function should return vector of shape (n,1) with the corresponding angles between X and Y. Again, don't use loops, but use vectorized operations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Broadcasting\n",
     "\n",
     "We have seen that NumPy allows array operations that are performed element-wise. But NumPy also allows binary operations that don't require the two arrays to have the same shape. For example, we can add 3 to all elements of an array with the following expression:"
@@ -1687,6 +1790,16 @@
     "a=np.array([1,2,3])\n",
     "b=np.array([4,5])\n",
     "#a+b                 # This does not work since it violates the rule 3 above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (multiplication table revisited)</div>\n",
+    "Write function `multiplication_table` that gets a positive integer `n` as parameter. The function should return an array with shape (n,n). The element at index `(i,j)` should be `i*j`. Don't use `for` loops! In your solution, rely on broadcasting, the `np.arange` function, reshaping and vectorized operators. Example of usage:\n",
+    "print(multiplication_table(3))\n",
+    "..."
    ]
   },
   {
@@ -2025,6 +2138,24 @@
    "metadata": {},
    "source": [
     "Compare this result with the original array `a` to make sure you understand what's going on!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (column comparison)</div>\n",
+    "\n",
+    "Write function `column_comparison` that gets a two dimensional array as parameter. The function should return a new array containing those rows from the input that have the value in the second column larger than in the second last column. You may assume that the input contains at least two columns. Don't use loops, but instead vectorized operations. Try out your function in the main function. Example input and output:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (first half second half)</div>\n",
+    "\n",
+    "Write function `first_half_second_half` that gets a two dimensional array of shape `(n,2*m)` as a parameter. The input array has `2*m` columns. The output from the function should be a matrix with those rows from the input that have the sum of the first `m` elements larger than the sum of the last `m` elements on the row. Your solution should call the `np.sum` function or the corresponding method exactly `2*n` times."
    ]
   },
   {
@@ -2553,6 +2684,100 @@
     "y = s @ x                  # Transforms x to y\n",
     "print(y)\n",
     "print(s_inv @ y)           # Transforms y back to x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (matrix power)</div>\n",
+    "\n",
+    "Repeat the functionality of the Numpy function `numpy.linalg.matrix_power`, which raises a square matrix of shape (m,m) to the `n`th power. Here the multiplication is the matrix multiplication. Square matrix `a` raised to power `n` is therefore `a @ a @ ... @ a` where `a` is repeated `n` times. When n is zero then $a^0$ is equal to `np.eye(m)`.\n",
+    "\n",
+    "Part 1.\n",
+    "\n",
+    "Write function `matrix_power` that gets as first argument a square matrix `a` and as second argument a non-negative integer `n`. The function should return the matrix `a` multiplied by itself `n-1` times.\n",
+    "Use Python's reduce function and a generator expression.\n",
+    "\n",
+    "Part 2.\n",
+    "\n",
+    "Extend the `matrix_power` function.\n",
+    "For negative powers, we define $a^{-1}$ to be equal to the multiplicative inverse of `a`. You can use NumPy's function `numpy.linalg.inv` for this. And you may assume that the input matrix is invertible."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (correlation)</div>\n",
+    "\n",
+    "Load the iris dataset using the provided function `load()` in the stub solution. The four columns of the returned array correspond to\n",
+    "* sepal length (cm)\n",
+    "* sepal width (cm)\n",
+    "* petal length (cm)\n",
+    "* petal width (cm)\n",
+    "\n",
+    "Part 1. What is the Pearson correlation between the variables `sepal length` and `petal length`. Compute this using the `scipy.stats.pearsonr` function. It returns a tuple whose first element is the correlation. Write a function `lengths` that loads the data and return the correlation.\n",
+    "\n",
+    "Part 2. What are the correlations between all the variable. Write a function `correlations` that returns an array of shape (4,4) containing the correlations. Use the function `np.corrcoef`. Which pair of variables is the most highly correlated?\n",
+    "\n",
+    "Note the input formats of both functions `pearsonr` and `corrcoef`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solving system of linear equations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Scipy library has function [`np.linalg.solve`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.linalg.solve.html) to solve systems of linear equations. The `solve` function gets as parameters the coefficient matrix and the vector containing the constant term. Below is an example of the general system of linear equations\n",
+    "\n",
+    "\\\\(a_{11}x_1 + a_{12}x_2 + \\cdots a_{1m}x_m = b_1\\\\\n",
+    "a_{21}x_1 + a_{22}x_2 + \\cdots a_{2m}x_m = b_2\\\\\n",
+    "\\cdots\\\\\n",
+    "a_{n1}x_1 + a_{n2}x_2 + \\cdots a_{nm}x_m = b_n\\\\\n",
+    "\\\\)\n",
+    "\n",
+    "\n",
+    "and the equivalent matrix form\n",
+    "\\\\(A \\cdot x = b\\\\)\n",
+    "where $A$ has shape `(n,m)`, the unknown $x$ has shape `(m,1)`, and $b$ has shape `(n,1)`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (meeting lines)</div>\n",
+    "\n",
+    "Write function `meeting_lines` that gets the coefficients of two lines as parameters and returns the point where the two lines meet. The equations for the lines are $y=a_1x + b_1$ and $y=a_2x + b_2$. Use the `np.linalg.solve` function. Create a main function to test your solution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (meeting planes)</div>\n",
+    "Write function `meeting_planes` that gets the coefficients of three planes as parameters and returns the point where the planes meet. The equations for the planes are:\n",
+    "$z =a_1y + b_1x+ c_1$,\n",
+    "$z =a_2y + b_2x+ c_2$, and\n",
+    "$z =a_3y + b_3x+ c_3$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (almost meeting lines)</div>\n",
+    "In the earlier \"meeting lines\" exercise there is a problem if the lines don't meet at all. Extend that solution so that it tells the meeting point if it exists, and otherwise finds the point that is closest to the both lines.\n",
+    "You can use the `numpy.linalg.lstsq` for this.\n",
+    "\n",
+    "Are there still some problematics inputs?"
    ]
   }
  ],
