--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -11,6 +11,10 @@
     "There are several uses for high-dimensional arrays in data analysis. For instance, they can be used to:\n",
     "* store matrices, solve systems of linear equations, find eigenvalues/vectors, find matrix decompositions, and solve other problems familiar from linear algebra\n",
     "* store multi-dimensional measurement data. For example, an element a_ij in a 2-dimensional array might store the temperature measured at coordinates i, j on a 2-dimension surface.\n",
+    "* images and videos can be represented as NumPy arrays:\n",
+    "  * a gray-scale image can be represented as a two dimensional array\n",
+    "  * a color image can be represented as a three dimensional image, the third dimension contains the color components red, green, and blue\n",
+    "  * a color video can be represented as a four dimensional array\n",
     "* a 2-dimensional table might store a sequence of *samples*, and each sample might be divided into *features*. For example, we could measure the weather conditions once per day, and the conditions could include the temperature, direction and speed of wind, and the amount of rain. Then we would have one sample per day, and the features would be the temperature, wind, and rain. In the standard representation of this kind of tabular data, we the rows corresponds to samples and the columns correspond to features. We see more of this kind of data in the chapters on Pandas and Scikit-learn.\n",
     "\n",
     "In this chapter we will go through:\n",
@@ -1248,6 +1252,15 @@
     "for i, p in enumerate(parts):\n",
     "    print(\"part %i:\" % i)\n",
     "    print(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (row and column vectors)</div>\n",
+    "\n",
+    "Create function `get_row_vectors` that returns a list of rows from the input array, but this time the rows must have shape `(1,n)`. Similarly, create function `get_columns_vectors` that returns the column of the input matrix having shape `(n,1)`."
    ]
   },
   {
@@ -2531,6 +2544,17 @@
    ],
    "source": [
     "print(a[idx])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <div class=\"alert alert-info\"> Exercise X (most frequent first)</div>\n",
+    "\n",
+    "Write function `most_frequent_first` that get a two dimension array and an index `c` of a column as parameters. The function should then return the array whose rows are sorted so that those rows with the most frequent element in column `c` come first, then come the rows with the second most frequent element if column `c`, and so on.\n",
+    "\n",
+    "Example of usage:\n"
    ]
   },
   {
