--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -938,31 +938,31 @@
     "#### <div class=\"alert alert-info\"> Exercise X (rows and columns)</div>\n",
     "\n",
     "Write two functions, `get_rows` and `get_columns`, that get a two dimensional array as parameter.\n",
-    "They should return the list of rows and columns of the array, respectively. The rows and columns should be one dimensional arrays. You may use the transpose operation, which flips rows to columns. The transpose is done by the `T` method:"
+    "They should return the list of rows and columns of the array, respectively. The rows and columns should be one dimensional arrays. You may use the *transpose* operation, which flips rows to columns, in your solution. The transpose is done by the `T` method:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.48431215  0.57914048 -0.18158257  1.41020463]\n",
-      " [-0.37447169  0.27519832 -0.96075461  0.37692697]\n",
-      " [ 0.03343893  0.68056724 -1.56349669 -0.56669762]\n",
-      " [-0.24214951  1.51439128 -0.3330574   0.04736482]]\n",
-      "[[ 0.48431215 -0.37447169  0.03343893 -0.24214951]\n",
-      " [ 0.57914048  0.27519832  0.68056724  1.51439128]\n",
-      " [-0.18158257 -0.96075461 -1.56349669 -0.3330574 ]\n",
-      " [ 1.41020463  0.37692697 -0.56669762  0.04736482]]\n"
+      "[[5 5 6 8]\n",
+      " [4 1 4 9]\n",
+      " [8 1 1 7]\n",
+      " [9 9 3 6]]\n",
+      "[[5 4 8 9]\n",
+      " [5 1 1 9]\n",
+      " [6 4 1 3]\n",
+      " [8 9 7 6]]\n"
      ]
     }
    ],
    "source": [
-    "a=np.random.randn(4,4)\n",
+    "a=np.random.randint(0, 10, (4,4))\n",
     "print(a)\n",
     "print(a.T)"
    ]
