Added exercises and material

--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -366,11 +366,13 @@
     "#### <div class=\"alert alert-info\">Exercise 2 (mystery data)</div>\n",
     "Read the tab separated file mystery_data.tsv. Its first five columns define the features, and the last column is the response. Use scikit-learns's LinearRegression to fit this data. Implement function `mystery_data` that reads this file and learns and returns the regression coefficients for the five features. You don't have to fit the intercept. The main method will print output in the following form:\n",
     "\n",
-    "Coefficient of X1 is ...<br/>\n",
-    "Coefficient of X2 is ...<br/>\n",
-    "Coefficient of X3 is ...<br/>\n",
-    "Coefficient of X4 is ...<br/>\n",
+    "```\n",
+    "Coefficient of X1 is ...\n",
+    "Coefficient of X2 is ...\n",
+    "Coefficient of X3 is ...\n",
+    "Coefficient of X4 is ...\n",
     "Coefficient of X5 is ...\n",
+    "```\n",
     "\n",
     "Which features you think are needed to explain the response Y?"
    ]
