Added more details to instructions

--- a/basics.ipynb
+++ b/basics.ipynb
@@ -177,11 +177,13 @@
    "metadata": {},
    "source": [
     "#### <div class=\"alert alert-info\"> Exercise 1 (hello world)</div>\n",
-    "Fill in the missing piece in the solution stub to make it print the following:\n",
+    "Fill in the missing piece in the solution stub file `hello_world.py` in folder `src` to make it print the following:\n",
     "\n",
     "`Hello, world!`\n",
     "\n",
-    "Make sure you use correct indenting.\n",
+    "Make sure you use correct indenting. You can run it with command `python3 src/hello_world.py`.\n",
+    "If the output looks good, then you can test it with command `tmc test`. If the tests pass,\n",
+    "submit your solution to the server with command `tmc submit`.\n",
     "<hr/>"
    ]
   },
@@ -315,7 +317,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3440,7 +3441,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4578,7 +4578,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
