--- a/instructions.ipynb
+++ b/instructions.ipynb
@@ -50,7 +50,10 @@
     "## 2 Log in to the course\n",
     "\n",
     "* Go to the [exercise page](https://tmc.mooc.fi/staging/org/hy/courses/106) of the course\n",
-    "* If you don't already have an account on this **staging** server, press the signup button"
+    "* If you don't already have an account on this **staging** server, press the signup button\n",
+    "* Choose organization Helsingin yliopisto\n",
+    "* Choose course Data Analysis with Python\n",
+    "* Register to the course"
    ]
   },
   {
