Added more material to Pandas section

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<!--NAVIGATION-->\n",
+    "\n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/notebooks/numpy.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Numpy\n",
     "\n",
     "NumPy is a Python library for handling multi-dimensional arrays. It contains both the data structures needed for the storing and accessing arrays, and operations and functions for computation using these arrays. Although the arrays are usually used for storing number, other type of data can be stored as well, such as strings. Unlike lists in core Python, NumPy's fundamental data structure, the array, must have the same data type for all its elements. The homogeneity of arrays allows highly optimized functions that use arrays as their inputs.\n",
@@ -1942,7 +1952,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To try these operations on real data, we download some weather statistics from Helsinki (Kumpula) weather statition. More precisely we will get the daily average temperatures from year 2017. We use the pandas library, which we will cover later during this course, to load the data."
+    "To try these operations on real data, we download some weather statistics from Helsinki (Kumpula) weather station. More precisely we will get the daily average temperatures from year 2017. We use the pandas library, which we will cover later during this course, to load the data."
    ]
   },
   {
@@ -2857,6 +2867,16 @@
     "print(y, x, exact)\n",
     "1.000000 -1.000000 True\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!--NAVIGATION-->\n",
+    "\n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/jttoivon/x/blob/master/notebooks/numpy.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n"
    ]
   }
  ],
